// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should match snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#007BFF",
      "borderRadius": 39,
      "color": "#FFFFFF",
      "columnGap": 8,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 23,
      "paddingVertical": 21,
    }
  }
  testID="button"
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "Poppins-Regular",
        },
        {
          "fontSize": 14,
          "lineHeight": 20,
        },
        [
          {
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "lineHeight": 27,
          },
          {
            "color": "#FFFFFF",
          },
          {},
        ],
      ]
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`Button Component should match snapshot for secondary type 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FF6347",
      "borderRadius": 39,
      "color": "#FFFFFF",
      "columnGap": 8,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 23,
      "paddingVertical": 21,
    }
  }
  testID="button"
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "Poppins-Regular",
        },
        {
          "fontSize": 14,
          "lineHeight": 20,
        },
        [
          {
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "lineHeight": 27,
          },
          {
            "color": "#FFFFFF",
          },
          {},
        ],
      ]
    }
  >
    Click Me
  </Text>
</View>
`;
